Speaker cloud index column item alignment fix.

--- a/_assets/stylesheets/_speakers.scss
+++ b/_assets/stylesheets/_speakers.scss
@@ -20,7 +20,6 @@
   li {
     list-style: none;
     margin-left: 0;
-    margin-bottom: $line-quarter;
   }
 }
 
